移植储存最近记录到 1.12.2 注册表